# crud_api_compose_example

./: .env  .gitignore  README.md  docker-compose.yml  install.sh
flask_redis_editor/: Dockerfile  flask_redis_editor.py  pyproject.toml  requirements.txt
memory_notifier/: memory_notifier.py  memory_notifier.service
